<resources>
    <!--Títulos-->
    <string name="app_name">Viñeta Virtual</string>
    <string name="textView_registrarse">Registrarse</string>
    <string name="textView_iniciarSesion">Iniciar Sesión</string>

    <!--Enlaces-->
    <string name="textView_sinCuenta"><u>¿Aún no tienes cuenta? Créala aquí</u></string>
    <string name="textView_registroClienteForm">¿Eres editor, distribuidora o creador? &#xA;&#xA;<u>Crea una cuenta de cliente aquí</u></string>
    <string name="textView_terminos">He leído y acepto los
        <font color="#0000FF"><u>Términos y Condiciones, la Política de Privacidad, las Condiciones Generales de Contratación y el Aviso Legal.</u></font></string>

    <!--Campos obligatorios-->
        <!--Para activity registro-->
        <string name="textView_usuarioEmail">Usuario o Email <font color="#FF0000">*</font></string>
        <string name="textView_contrasena">Contraseña <font color="#FF0000">*</font></string>
        <string name="textView_nombreUsuario">Nombre de usuario <font color="#FF0000">*</font></string>
        <string name="textView_email">Email <font color="#FF0000">*</font></string>
        <string name="textView_fechaNac">Fecha de nacimiento <font color="#FF0000">*</font></string>
        <string name="textView_nombreEmpresa">Nombre o razón social <font color="#FF0000">*</font></string>
        <string name="textView_tipoEmpresa">Tipo <font color="#FF0000">*</font></string>

        <!--Para activity anadir comic-->
        <string name="textView_tituloComic">Título <font color="#FF0000">*</font></string>
        <string name="textView_selloComic">Sello editorial <font color="#FF0000">*</font></string>
        <string name="textView_autoresComic">Autores <font color="#FF0000">*</font></string>

        <!--Para activity anadir comic-->

</resources>