<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/registro_lector"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:gravity="start|center"
        android:paddingHorizontal="35dp">

        <ImageButton
            android:id="@+id/btn_atras_login"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:background="@drawable/bg_glass_button"
            android:src="@drawable/ic_next"
            android:contentDescription="@string/textView_iniciarSesion"
            android:scaleType="centerInside"
            app:tint="@android:color/white"
            android:rotation="180"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/textView_registrarse"
            android:textSize="25sp"
            android:textColor="@color/white"
            android:layout_marginBottom="40dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_nombreUsuario"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_NombreUsuario"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_email"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_Email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/textView_contrasena"/>

        <EditText
            android:id="@+id/et_Contrasena"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:inputType="textPassword"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/textView_fechaNac"/>

        <EditText
            android:id="@+id/et_FechaNac"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="25dp"
            android:inputType="none"
            android:focusable="true"
            android:clickable="true"/>

        <TextView
            android:id="@+id/tv_link_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_registroClienteForm"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginTop="25dp"
            android:onClick="startRegistroClienteActivity"/>

        <ImageButton
            android:id="@+id/btn_Registro_Lector"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="50dp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/bg_glass_button"
            android:src="@drawable/ic_next"
            android:contentDescription="@string/textView_registrarse"
            android:scaleType="centerInside"
            app:tint="@android:color/white"/>



    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>