<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login"
    android:background="@drawable/bg_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        android:gravity="start|center"
        android:paddingHorizontal="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:text="Iniciar Sesión"
            android:textSize="25dp"
            android:textColor="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_usuarioEmail"
            android:textColor="@color/white"/>

        <EditText
            android:id="@+id/et_UsuarioEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/textView_contrasena"/>

        <EditText
            android:id="@+id/et_Contrasena"
            android:layout_width="match_parent"
            android:textColor="@color/white"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tv_link_cliente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textView_sinCuenta"
            android:textStyle="bold"
            android:layout_marginTop="100dp"
            android:textColor="@color/white"
            android:onClick="startRegistroLectorActivity"/>

        <ImageButton
            android:id="@+id/btn_Login"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="100dp"
            android:layout_gravity="bottom|end"
            android:background="@drawable/bg_glass_button"
            android:src="@drawable/ic_next"
            android:contentDescription="Iniciar Sesión"
            android:scaleType="centerInside"
            app:tint="@android:color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>