<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none"
    android:background="@drawable/bg_gradient">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="20dp">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp">
            <ImageButton
                android:id="@+id/btn_cerrar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center|start"
                android:background="@drawable/bg_glass_button"
                android:src="@drawable/ic_cerrar"
                android:contentDescription="atrás"
                android:scaleType="centerInside"
                app:tint="#22103b"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Editar perfil"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:textStyle="bold"/>
        </FrameLayout>
        <!--FORM:-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="30dp">
            <ImageButton
                android:id="@+id/iv_portada"
                android:layout_width="160dp"
                android:layout_height="240dp"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30dp"
                android:textColor="@color/white"
                android:textSize="12sp"
                android:src="@drawable/sin_foto"
                android:scaleType="centerCrop"/>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--Nombre de usuario-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    app:boxStrokeWidth="1dp"
                    android:hint="@string/textView_nombreUsuario"
                    android:overScrollMode="always"
                    app:hintTextColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    app:cursorColor="@color/teal_200"
                    app:boxStrokeColor="@color/text_input_stroke_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nombreUsuario"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--contraseña-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:boxStrokeWidth="1dp"
                    android:hint="@string/textView_contrasena"
                    android:overScrollMode="always"
                    app:hintTextColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    app:cursorColor="@color/teal_200"
                    app:boxStrokeColor="@color/text_input_stroke_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_contrasena"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="30dp">
                <!--email-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    app:boxStrokeWidth="1dp"
                    android:hint="@string/textView_email"
                    android:overScrollMode="always"
                    app:hintTextColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    app:cursorColor="@color/teal_200"
                    app:boxStrokeColor="@color/text_input_stroke_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--fecha nac-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:boxStrokeWidth="1dp"
                    android:hint="@string/textView_fechaNac"
                    android:overScrollMode="always"
                    app:hintTextColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    app:cursorColor="@color/teal_200"
                    app:boxStrokeColor="@color/text_input_stroke_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_fechaNac"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--nombre-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    app:boxStrokeWidth="1dp"
                    android:hint="Nombre"
                    android:overScrollMode="always"
                    app:hintTextColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    app:cursorColor="@color/teal_200"
                    app:boxStrokeColor="@color/text_input_stroke_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_nombreLector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                </com.google.android.material.textfield.TextInputLayout>
                <!--apellidos-->
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    app:boxStrokeWidth="1dp"
                    android:hint="Apellidos"
                    android:overScrollMode="always"
                    app:hintTextColor="@color/teal_200"
                    android:textColorHint="@color/teal_200"
                    app:cursorColor="@color/teal_200"
                    app:boxStrokeColor="@color/text_input_stroke_color"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_apellidosLector"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/white"
                        android:textAlignment="center"/>
                </com.google.android.material.textfield.TextInputLayout>
            </FrameLayout>
            <Button
                android:id="@+id/btn_editarPerfil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_gravity="end"
                android:text="Guardar cambios"
                android:backgroundTint="#8003DAC5"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>